--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   },
   "dependencies": {
     "@fontsource/dm-sans": "^5.2.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@token-icons/react": "^2.13.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.0",
     "geist": "^1.7.0",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.1.6",
     "next": "14.2.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^3.4.1",
     "typescript": "^5.4.5",
     "zustand": "^4.5.2"
   },
