--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "nanoid": "^5.1.6",
     "next": "14.2.3",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.38.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.13.2",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.4.1",
+    "three": "^0.167.1",
     "typescript": "^5.4.5",
     "zustand": "^4.5.2"
   },
