--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
+# dependencies
 node_modules
+
+# next.js
 .next
+out
+
+# env files
 .env
 .env*.local
+
+# build artifacts
+tsconfig.tsbuildinfo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# vercel
+.vercel
